k8s/ingress/ssok-bank/base/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssok-bank-ingress
  namespace: bank
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - kudong.kr
      secretName: kudong-bank-tls-secret
  rules:
    - host: kudong.kr
      http:
        paths:
          - path: /api/bank/transfer
            pathType: Prefix
            backend:
              service:
                name: ssok-bank-proxy
                port:
                  number: 8080
          - path: /api/bank
            pathType: Prefix
            backend:
              service:
                name: ssok-bank
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssok-bank
                port:
                  number: 8080
